--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.7.2",
@@ -26,8 +29,16 @@
   },
   "private": true,
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "babel-preset-expo": "^54.0.6",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
     "prettier": "^3.6.2"
   }
 }
