[Chore] Prettier 스타일 체크 단계 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,12 @@ jobs:
         env:
           CI: true
 
+      - name: Run ESLint
+        run: npm run lint
+
+      - name: Run Prettier check
+        run: npm run format:check
+
       # Expo 설정 점검
       - name: Run Expo doctor
         run: npx expo-doctor
