[Chore] module 타입 명시

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "modam",
   "license": "0BSD",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -10,7 +11,8 @@
     "web": "expo start --web",
     "lint": "eslint . --ext .js,.jsx",
     "lint:fix": "eslint . --ext .js,.jsx --fix",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "format:check": "prettier . --check"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.7.2",
