--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.7.2",
     "@react-navigation/native": "^7.1.19",
