--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.7.2",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.1",
     "expo": "~54.0.23",
+    "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
     "react": "19.1.0",
@@ -26,6 +29,8 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.0",
+    "react-native-svg-transformer": "^1.5.2",
     "react-native-worklets": "0.5.1"
   },
   "private": true,
