--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/bottom-tabs": "^7.7.2",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.1",
+    "axios": "^1.13.2",
     "expo": "~54.0.23",
+    "expo-auth-session": "^7.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
@@ -31,6 +33,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.0",
     "react-native-svg-transformer": "^1.5.2",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "private": true,
