--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-svg": "^15.15.0",
     "react-native-svg-transformer": "^1.5.2",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zustand": "^5.0.9"
   },
   "private": true,
   "devDependencies": {
