--- a/app.json
+++ b/app.json
@@ -39,6 +39,9 @@
     },
     "updates": {
       "url": "https://u.expo.dev/91911265-500d-402d-a678-230d6a0b75c0"
-    }
+    },
+    "plugins": [
+      "expo-secure-store"
+    ]
   }
 }
