--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo": "~54.0.23",
     "expo-auth-session": "^7.0.9",
     "expo-linear-gradient": "~15.0.7",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
     "react": "19.1.0",
