--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.7.2",
+    "@react-navigation/material-top-tabs": "^7.4.11",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.1",
     "axios": "^1.13.2",
@@ -37,6 +38,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.0",
     "react-native-svg-transformer": "^1.5.2",
+    "react-native-tab-view": "^4.2.2",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.9"
