--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-tab-view": "^4.2.2",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.9",
+    "react-native-pager-view": "6.9.1"
   },
   "private": true,
   "devDependencies": {
