--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-masked-view/masked-view": "0.3.2",
-    "@react-navigation/bottom-tabs": "^7.7.2",
+    "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/material-top-tabs": "^7.4.11",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.1",
@@ -33,6 +33,7 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
@@ -41,8 +42,7 @@
     "react-native-tab-view": "^4.2.2",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
-    "zustand": "^5.0.9",
-    "react-native-pager-view": "6.9.1"
+    "zustand": "^5.0.9"
   },
   "private": true,
   "devDependencies": {
