--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.sangjoonson.modam"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -40,6 +41,8 @@
     "updates": {
       "url": "https://u.expo.dev/91911265-500d-402d-a678-230d6a0b75c0"
     },
-    "plugins": ["expo-secure-store"]
+    "plugins": [
+      "expo-secure-store"
+    ]
   }
 }
