--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-auth-session": "^7.0.9",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.7",
+    "expo-notifications": "~0.32.16",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
