--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-firebase/app": "^23.7.0",
+    "@react-native-firebase/messaging": "^23.7.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/material-top-tabs": "^7.4.11",
@@ -27,6 +29,7 @@
     "expo-auth-session": "^7.0.9",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.7",
+    "expo-notifications": "~0.32.16",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
