--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-updates": "~29.0.12",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
     "react-native-reanimated": "~4.1.1",
