--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "modam",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icons.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -41,6 +41,18 @@
     "updates": {
       "url": "https://u.expo.dev/91911265-500d-402d-a678-230d6a0b75c0"
     },
-    "plugins": ["expo-secure-store"]
+    "plugins": [
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "dynamic"
+          }
+        }
+      ],
+      "@react-native-firebase/app",
+      "@react-native-firebase/messaging",
+      "expo-secure-store"
+    ]
   }
 }
