--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.23",
     "expo-auth-session": "^7.0.9",
+    "expo-build-properties": "^1.0.10",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-notifications": "~0.32.16",
