Fix iOS frameworks config for Firebase

--- a/app.json
+++ b/app.json
@@ -47,7 +47,8 @@
         "expo-build-properties",
         {
           "ios": {
-            "useFrameworks": "dynamic"
+            "useFrameworks": "static",
+            "useModularHeaders": true
           }
         }
       ],
