--- a/app.json
+++ b/app.json
@@ -48,7 +48,10 @@
         {
           "ios": {
             "useFrameworks": "static",
-            "useModularHeaders": true
+            "useModularHeaders": true,
+            "buildSettings": {
+              "CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES": "YES"
+            }
           }
         }
       ],
