Force non-modular headers for RNFB pods

--- a/app.json
+++ b/app.json
@@ -55,6 +55,7 @@
           }
         }
       ],
+      "./plugins/withNonModularHeaders",
       "@react-native-firebase/app",
       "@react-native-firebase/messaging",
       "expo-secure-store"
