--- a/app.json
+++ b/app.json
@@ -47,8 +47,7 @@
         "expo-build-properties",
         {
           "ios": {
-            "useFrameworks": "static",
-            "useModularHeaders": true
+            "useFrameworks": "dynamic"
           }
         }
       ],
