Revert "Allow non-modular headers for iOS build"
This reverts commit bbbaedefe302a8985b5a1f3f1dec6a738dc41c60.

--- a/app.json
+++ b/app.json
@@ -48,10 +48,7 @@
         {
           "ios": {
             "useFrameworks": "static",
-            "useModularHeaders": true,
-            "buildSettings": {
-              "CLANG_ALLOW_NON_MODULAR_INCLUDES_IN_FRAMEWORK_MODULES": "YES"
-            }
+            "useModularHeaders": true
           }
         }
       ],
