--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "modam",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icons.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
@@ -41,18 +41,6 @@
     "updates": {
       "url": "https://u.expo.dev/91911265-500d-402d-a678-230d6a0b75c0"
     },
-    "plugins": [
-      [
-        "expo-build-properties",
-        {
-          "ios": {
-            "useFrameworks": "dynamic"
-          }
-        }
-      ],
-      "@react-native-firebase/app",
-      "@react-native-firebase/messaging",
-      "expo-secure-store"
-    ]
+    "plugins": ["expo-secure-store"]
   }
 }
