--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "axios": "^1.13.2",
     "expo": "~54.0.23",
     "expo-auth-session": "^7.0.9",
-    "expo-build-properties": "^1.0.10",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-notifications": "~0.32.16",
@@ -37,10 +36,10 @@
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
-    "react-native-reanimated": "~3.17.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.0",
+    "react-native-svg": "15.12.1",
     "react-native-svg-transformer": "^1.5.2",
     "react-native-tab-view": "^4.2.2",
     "react-native-webview": "13.15.0",
@@ -60,5 +59,8 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "prettier": "^3.6.2"
+  },
+  "overrides": {
+    "react-native-worklets": "0.5.1"
   }
 }
