--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint . --ext .js,.jsx",
     "lint:fix": "eslint . --ext .js,.jsx --fix",
     "format": "prettier . --write",
-    "format:check": "prettier . --check"
+    "format:check": "prettier . --check",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -49,7 +50,10 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
+    "axios-mock-adapter": "^2.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^54.0.6",
     "eslint": "^9.39.1",
@@ -58,9 +62,34 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "prettier": "^3.6.2"
+    "jest": "^29.7.0",
+    "jest-expo": "^54.0.16",
+    "prettier": "^3.6.2",
+    "react-test-renderer": "^19.1.0"
   },
   "overrides": {
     "react-native-worklets": "0.5.1"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "testMatch": [
+      "**/__tests__/**/*.test.js"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "moduleNameMapper": {
+      "^@apis/(.*)$": "<rootDir>/src/apis/$1",
+      "^@assets/(.*)$": "<rootDir>/assets/$1",
+      "^@components/(.*)$": "<rootDir>/src/components/$1",
+      "^@constants/(.*)$": "<rootDir>/src/constants/$1",
+      "^@navigation/(.*)$": "<rootDir>/src/navigation/$1",
+      "^@screens/(.*)$": "<rootDir>/src/screens/$1",
+      "^@store/(.*)$": "<rootDir>/src/store/$1",
+      "^@theme/(.*)$": "<rootDir>/src/theme/$1",
+      "^@utils/(.*)$": "<rootDir>/src/utils/$1",
+      "^@mocks/(.*)$": "<rootDir>/src/mocks/$1",
+      "^@hooks/(.*)$": "<rootDir>/src/hooks/$1"
+    }
   }
 }
