--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,12 @@
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_APPLE_CLIENT_ID": "modam.sangjoonson.com",
+        "EXPO_PUBLIC_APPLE_REDIRECT_URI": "https://hwangrock.com/api/v1/auth/login/oauth2/code/apple",
+        "EXPO_PUBLIC_KAKAO_REDIRECT_URI": "https://hwangrock.com/login/oauth2/code/kakao"
+      }
     }
   },
   "submit": {
